key.core/src/test/resources/de/uka/ilkd/key/java/coverage/rejected/static-import/p/UseStatic.java
package p;
import static p.Consts.FOO;
import static p.Consts.twice;
public class UseStatic {
    int f() { return twice(FOO); }
}
